docs-archive/apache-airflow-providers-apache-kafka/1.10.0/_sources/_api/airflow/providers/apache/kafka/hooks/base/index.rst.txt
airflow.providers.apache.kafka.hooks.base
=========================================

.. py:module:: airflow.providers.apache.kafka.hooks.base


Classes
-------

.. autoapisummary::

   airflow.providers.apache.kafka.hooks.base.KafkaBaseHook


Module Contents
---------------

.. py:class:: KafkaBaseHook(kafka_config_id=default_conn_name, *args, **kwargs)

   Bases: :py:obj:`airflow.sdk.BaseHook`


   A base hook for interacting with Apache Kafka.

   :param kafka_config_id: The connection object to use, defaults to "kafka_default"


   .. py:attribute:: conn_name_attr
      :value: 'kafka_config_id'



   .. py:attribute:: default_conn_name
      :value: 'kafka_default'



   .. py:attribute:: conn_type
      :value: 'kafka'



   .. py:attribute:: hook_name
      :value: 'Apache Kafka'



   .. py:attribute:: kafka_config_id
      :value: 'kafka_default'



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



   .. py:property:: get_conn
      :type: Any


      Get the configuration object.



   .. py:method:: test_connection()

      Test Connectivity from the UI.



